change steps to jobs in workflow definition

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
             helm delete $RELEASE . -n << pipeline.parameters.namespace >> 
 workflows:
   tests:
-    steps: 
+    jobs: 
       - install-helm-chart:
           filters:
             tags:
