--- a/values/dev/spacerace/space03-dev.yaml
+++ b/values/dev/spacerace/space03-dev.yaml
@@ -1,6 +1,6 @@
 init:
   sync:
-    enabled: false
+    enabled: true
   importSnapshot:
     enabled: true
     SNAPSHOTURL: "https://very-temporary-spacerace-chain-snapshot.s3.amazonaws.com/Spacerace_pruned_stateroots_snapshot_latest.car"
