fixed /home/test issue

--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -49,12 +49,12 @@ spec:
       - name: api-keys
         image: busybox
         command: ["/bin/sh","-c"]
-        args: ["cp /secret/token $HOME/powergate/token"]
+        args: ["cp /secret/token /root/powergate/token"]
         volumeMounts:
           - name: lotus-secret-vol
             mountPath: "/secret"
           - name: vol-powergate
-            mountPath: $HOME/powergate
+            mountPath: /root/powergate
  {{- end }}
 {{- if and .Values.init.import.enabled .Values.Lotus.enabled }}
       - name: import-wait
@@ -71,7 +71,7 @@ spec:
         command: ["/bin/entrypoint","-i"]
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: /root/.lotus
           - name: {{ (index .Values.init.import.volume 0).name }}
             mountPath: /chain
 {{- end }}
@@ -81,7 +81,7 @@ spec:
         command: ["/bin/entrypoint","-n"]
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: "/root/.lotus"
         env:
           - name: SNAPSHOTURL
             value: "{{ .Values.init.importSnapshot.SNAPSHOTURL }}"
@@ -92,7 +92,7 @@ spec:
         command: ["/bin/entrypoint","-s"]
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: "/root/.lotus"
 {{- end }}
       containers:
 {{- if .Values.Powergate.enabled }}
@@ -119,16 +119,16 @@ spec:
         - name: POWD_IPFSAPIADDR
           value: "/dns4/{{ .Values.apiDNS }}/tcp/5001"
         - name: POWD_LOTUSTOKENFILE
-          value: "$HOME/powergate/token"
+          value: "/root/powergate/token"
         - name: POWD_REPOPATH
-          value: "$HOME/powergate/.powergate"
+          value: "/root/powergate/.powergate"
         - name: POWD_GATEWAYBASEPATH
           value: "/{{ .Release.Name }}/powergate/7000"
         volumeMounts:
           - name: vol-powergate
-            mountPath: $HOME/powergate
+            mountPath: /root/powergate
 #          - name: vol-lotus
-#            mountPath: $HOME/.lotus
+#            mountPath: /root/.lotus
         resources:
 {{ toYaml .Values.resources.powergate | indent 10 }}
 {{- end }}
@@ -238,7 +238,7 @@ spec:
           name: p2p
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: /root/.lotus
         {{- if and (.Values.init.import.volume) (.Values.init.import.enabled) }}
           - name: {{ (index .Values.init.import.volume 0).name }}
             mountPath: /chain
@@ -403,7 +403,7 @@ spec:
         command: ["/bin/entrypoint","-i"]
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: /root/.lotus
           - name: {{ (index .Values.init.import.volume 0).name }}
             mountPath: /chain
 {{- end }}
@@ -413,7 +413,7 @@ spec:
         command: ["/bin/entrypoint","-n"]
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: /root/.lotus
         env:
         - name: SNAPSHOTURL
           value: {{ .Values.init.importSnapshot.SNAPSHOTURL }}
@@ -424,7 +424,7 @@ spec:
         command: ["/bin/entrypoint","-s"]
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: /root/.lotus
 {{- end }}
       containers:
 {{- if .Values.Powergate.enabled }}
@@ -451,16 +451,16 @@ spec:
         - name: POWD_IPFSAPIADDR
           value: "/dns4/127.0.0.1/tcp/5001"
         - name: POWD_LOTUSTOKENFILE
-          value: "$HOME/.lotus/token"
+          value: "/root/.lotus/token"
         - name: POWD_REPOPATH
-          value: "$HOME/powergate/.powergate"
+          value: "/root/powergate/.powergate"
         - name: POWD_GATEWAYBASEPATH
           value: "/{{ .Release.Name }}/powergate/7000"
         volumeMounts:
           - name: vol-powergate
-            mountPath: $HOME/powergate
+            mountPath: /root/powergate
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: /root/.lotus
         resources:
 {{ toYaml .Values.resources.powergate | indent 10 }}
 {{- end }}
@@ -569,7 +569,7 @@ spec:
           name: p2p
         volumeMounts:
           - name: vol-lotus
-            mountPath: $HOME/.lotus
+            mountPath: /root/.lotus
         {{- if and (.Values.init.import.volume) (.Values.init.import.enabled) }}
           - name: {{ (index .Values.init.import.volume 0).name }}
             mountPath: /chain
